--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twitchbot",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "My twitch bot",
   "main": "src/index.js",
   "scripts": {
@@ -12,6 +12,8 @@
   "author": "Artful",
   "license": "MIT",
   "dependencies": {
-    "javelin": "^0.3.2"
+    "javelin": "^0.3.2",
+    "sequelize": "^4.38.1",
+    "sqlite3": "^4.0.2"
   }
 }
