--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "express": "^4.16.3",
     "javelin": "^0.3.2",
+    "opener": "^1.5.1",
     "sequelize": "^4.38.1",
-    "sqlite3": "^4.0.2"
+    "simple-youtube-api": "^5.0.2",
+    "sqlite3": "^4.0.2",
+    "ws": "^6.0.0"
   }
 }
